--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO=mongodb://localhost:27017/mern1booking
+MONGO=mongodb+srv://tuan:12345678Abc@cluster0.h8bya9k.mongodb.net/jobapp
 JWT_SECRET="abc"
