--- a/server/.gitignore
+++ b/server/.gitignore
@@ -2,8 +2,8 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
+**/.env
+
 
 # testing
 /coverage
@@ -13,6 +13,7 @@
 
 # misc
 .DS_Store
+
 .env.local
 .env.development.local
 .env.test.local
@@ -21,6 +22,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/.VSCodeCounter
 
-/.env
+
