Update Register, modified Login QA 26/10

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,5 @@
 SAMPLE_IMAGE_01=https://www.topcv.vn/v4/image/tool-cv.png
 AUTH=http://localhost:8800/api/auth/
+NOTNULL_MESSAGE=Vui lòng nhập hết các trường
+WRONG_EMAIL=Vui lòng nhập đúng email
+PASSWORD_NOT_MATCH=Mật khẩu và xác nhận mật khẩu không khớp
