store cookie use react proxy

--- a/client/package.json
+++ b/client/package.json
@@ -55,5 +55,6 @@
     "eslint": "^8.24.0",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0"
-  }
+  },
+  "proxy": "http://localhost:8800/api"
 }
