--- a/client/.env
+++ b/client/.env
@@ -3,3 +3,8 @@ AUTH=http://localhost:8800/api/auth/
 NOTNULL_MESSAGE=Vui lòng nhập hết các trường
 WRONG_EMAIL=Vui lòng nhập đúng email
 PASSWORD_NOT_MATCH=Mật khẩu và xác nhận mật khẩu không khớp
+JOBS="Công nghệ thông tin, Xây dựng, Cơ khí, Kỹ thuật, Dệt may, Điện tử, Công nghệ cao, Công nghệ Ô tô, Công nhân xây dựng"
+GROSS="Dưới 3 triệu, Khoảng 3 - 5 triệu, Khoảng 5 - 7 triệu, Khoảng 7 - 10 triệu , Khoảng 10 - 20 triệu, Trên 20 triệu"
+LOCATION="Thành phố Hồ Chí Minh, Hà Nội, Cần Thơ, Đà Nẵng, Hải Dương, Bình Dương, Lâm Đồng, Hải Phòng, Cà Mau, Đồng Nai, Vũng Tàu, Kiên Giang"
+LEVEL="Nhân viên, Trưởng nhóm, Trưởng/Phó phòng, Quản lý / Giám sát, Tổng chi nhánh, Giám đốc, Thực tập sinh"
+npm install --legacy-peer-deps
