--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "@react-pdf/renderer": "^3.0.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "dayjs": "^1.11.5",
     "mui-image": "^1.0.7",
     "react": "^18.2.0",
@@ -24,6 +27,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-to-pdf": "^0.0.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,6 +42,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "browser": {
+    "buffer": false
   },
   "browserslist": {
     "production": [
