--- a/client/.env
+++ b/client/.env
@@ -8,7 +8,7 @@ GROSS="Dưới 3 triệu, Khoảng 3 - 5 triệu, Khoảng 5 - 7 triệu, Khoả
 LOCATION="Thành phố Hồ Chí Minh, Hà Nội, Cần Thơ, Đà Nẵng, Hải Dương, Bình Dương, Lâm Đồng, Hải Phòng, Cà Mau, Đồng Nai, Vũng Tàu, Kiên Giang"
 LEVEL="Nhân viên, Trưởng nhóm, Trưởng/Phó phòng, Quản lý / Giám sát, Tổng chi nhánh, Giám đốc, Thực tập sinh"
 JOBTYPES="Toàn thời gian, bán thời gian, thời vụ, Remote - Làm từ xa"
-SEXS="Nam, Nữ"
+SEXS="Nam, Nữ, Không yêu cầu"
 CURRENCY="USD, VND"
 GROSSTYPES = "Cố định, Trong khoảng, Thỏa thuận"
 EXP="Chưa có kinh nghiệm, Dưới 1 năm, Khoảng 1 - 3 năm, 5 năm"
