--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.5",
+    "draft-js": "^0.11.7",
     "mui-image": "^1.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
