--- a/client/package.json
+++ b/client/package.json
@@ -62,7 +62,10 @@
   "devDependencies": {
     "eslint": "^8.24.0",
     "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "@draft-js-plugins/editor": "^4.1.3",
+    "@draft-js-plugins/static-toolbar": "^4.1.3",
+    "draft-js": "^0.11.7"
   },
   "proxy": "http://localhost:8800/api"
 }
