--- a/client/package.json
+++ b/client/package.json
@@ -60,12 +60,12 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.24.0",
-    "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "@draft-js-plugins/editor": "^4.1.3",
     "@draft-js-plugins/static-toolbar": "^4.1.3",
-    "draft-js": "^0.11.7"
+    "draft-js": "^0.11.7",
+    "eslint": "^8.24.0",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "proxy": "http://localhost:8800/api"
 }
