--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.1",
     "nodemon": "^2.0.20",
     "swagger-ui-express": "^4.6.0"
