--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.1",
     "nodemon": "^2.0.20",
+    "query-string": "^7.1.1",
     "swagger-ui-express": "^4.6.0"
   }
 }
