--- a/client/.env
+++ b/client/.env
@@ -1,15 +1,16 @@
-SAMPLE_IMAGE_01=https://www.topcv.vn/v4/image/tool-cv.png
+REACT_APP_SAMPLE_IMAGE_01=https://www.topcv.vn/v4/image/tool-cv.png
 AUTH=http://localhost:8800/api/auth/
-NOTNULL_MESSAGE=Vui lòng nhập hết các trường
-WRONG_EMAIL=Vui lòng nhập đúng email
-PASSWORD_NOT_MATCH=Mật khẩu và xác nhận mật khẩu không khớp
-JOBS="Công nghệ thông tin, Kế toán, Marketing Xây dựng, Cơ khí, Kỹ thuật, Dệt may, Điện tử, Công nghệ cao, Công nghệ Ô tô, Công nhân xây dựng"
-GROSS="Dưới 3 triệu, Khoảng 3 - 5 triệu, Khoảng 5 - 7 triệu, Khoảng 7 - 10 triệu , Khoảng 10 - 20 triệu, Trên 20 triệu"
-LOCATION="Thành phố Hồ Chí Minh, Hà Nội, Cần Thơ, Đà Nẵng, Hải Dương, Bình Dương, Lâm Đồng, Hải Phòng, Cà Mau, Đồng Nai, Vũng Tàu, Kiên Giang"
-LEVEL="Nhân viên, Trưởng nhóm, Trưởng/Phó phòng, Quản lý / Giám sát, Tổng chi nhánh, Giám đốc, Thực tập sinh"
-JOBTYPES="Toàn thời gian, bán thời gian, thời vụ, Remote - Làm từ xa"
-SEXS="Nam, Nữ, Không yêu cầu"
-CURRENCY="USD, VND"
-GROSSTYPES = "Cố định, Trong khoảng, Thỏa thuận"
-EXP="Chưa có kinh nghiệm, Dưới 1 năm, Khoảng 1 - 3 năm, 5 năm"
+REACT_APP_NOTNULL_MESSAGE=Vui lòng nhập hết các trường
+REACT_APP_WRONG_EMAIL=Vui lòng nhập đúng email
+REACT_APP_PASSWORD_NOT_MATCH=Mật khẩu và xác nhận mật khẩu không khớp
+REACT_APP_JOBS="Công nghệ thông tin, Kế toán, Marketing Xây dựng, Cơ khí, Kỹ thuật, Dệt may, Điện tử, Công nghệ cao, Công nghệ Ô tô, Công nhân xây dựng"
+REACT_APP_GROSS="Dưới 3 triệu, Khoảng 3 - 5 triệu, Khoảng 5 - 7 triệu, Khoảng 7 - 10 triệu , Khoảng 10 - 20 triệu, Trên 20 triệu"
+REACT_APP_LOCATION="Thành phố Hồ Chí Minh, Hà Nội, Cần Thơ, Đà Nẵng, Hải Dương, Bình Dương, Lâm Đồng, Hải Phòng, Cà Mau, Đồng Nai, Vũng Tàu, Kiên Giang"
+REACT_APP_LEVEL="Nhân viên, Trưởng nhóm, Trưởng/Phó phòng, Quản lý / Giám sát, Tổng chi nhánh, Giám đốc, Thực tập sinh"
+REACT_APP_JOBTYPES="Toàn thời gian, bán thời gian, thời vụ, Remote - Làm từ xa"
+REACT_APP_SEXS="Nam, Nữ, Không yêu cầu"
+REACT_APP_CURRENCY="USD, VND"
+REACT_APP_GROSSTYPES = "Cố định, Trong khoảng, Thỏa thuận"
+REACT_APP_EXP="Chưa có kinh nghiệm, Dưới 1 năm, Khoảng 1 - 3 năm, 5 năm"
+
 npm install --legacy-peer-deps
