--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "type": "module",
   "author": "",
   "license": "ISC",
+  
+  
   "dependencies": {
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
@@ -21,8 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.1",
-    "nodemon": "^2.0.20",
-    "query-string": "^7.1.1",
-    "swagger-ui-express": "^4.6.0"
+    "nodemon": "^2.0.20"
+   
   }
 }
