add Loading efx and validate

--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.10",
     "react-toastify": "^9.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-dotenv && react-scripts start",
